--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -210,6 +210,15 @@
     </footer>
 </div>
 </body>
+{% block javascript %}
+<script>
+    const eventSource = new EventSource("{{ mercure('https://mercure.test/chat')|escape('js') }}");
+eventSource.onmessage = event => {
+    // Will be called every time an update is published by the server
+    console.log(JSON.parse(event.data));
+}
+</script>
+{% endblock %}
 
 </html>
 
