--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -56,7 +56,7 @@
                                 <li><a href="{{ path('produits_create') }}" title="ajouter un produit">Déposer une annonce</a></li>
                             {% endif %}
                             <li><a href="#" title="Parametres">Parametres</a></li>
-                            <li><a href="#" title="Messagerie">Messagerie</a></li>
+                            <li><a href="{{ path('app_message') }}" title="Messagerie">Messagerie</a></li>
                             {% if is_granted("ROLE_ADMIN") %}
                                 <li><a href="{{ path('admin_dashboard') }}" title="dashboard">Tableau de bord</a></li>
                                 <li><a href="{{ path('categories_create') }}" title="dashboard">ajouter une catégorie</a></li>
@@ -171,6 +171,7 @@
 
 
     <footer>
+        {% block footer %}
         <div class="copyright">
             <img src="{{ asset('img/logo sell me.png') }}" alt="Sell Me">
             <div>    &copy;{{ "now"|date("Y") }} Sell Me </div>
@@ -206,7 +207,7 @@
                 </ul>
             </nav>
         </div>
-
+{% endblock %}
     </footer>
 </div>
 </body>
