--- a/public/css/app.css
+++ b/public/css/app.css
@@ -787,15 +787,15 @@ transform: scale(1.1);
 }
 .element-image{
     position: absolute;
-    margin-left: 10px;
+    margin-left: 50px;
 }
 .element-title{
     position: relative;
-    margin-left: 120px;
+    margin-left: 170px;
 }
 .element-produit{
     position: relative;
-    margin-left: 120px;
+    margin-left: 170px;
 }
 
 .element-image img{
@@ -846,6 +846,7 @@ transform: scale(1.1);
 
     display: flex;
     flex-direction: column;
+    min-height: 400px;
     max-height: 400px;
     overflow-y: scroll;
 }
@@ -876,35 +877,39 @@ transform: scale(1.1);
     margin-left: 50px;
 }
 
-
 .chat-form {
-    display: flex;
-    background-color: #D9D9D9;
     padding: 5px;
-    margin-top: 10px;
-
+    background-color: #D9D9D9;
+    text-align: center; /* Aligner les éléments au centre */
 }
 .chat-form img {
     height: 30px;
     width: 30px;
+    vertical-align: middle; /* Aligner les images verticalement */
     margin-top: 5px;
+    cursor: pointer;
 }
 .chat-input{
     width: 60%;
-    margin-left: 50px;
-    margin-top: 5px;
-}
-.chat-input input{
-    margin-top: 5px;
-    word-wrap: break-word;
-    overflow: scroll;
-}
-.select-file{
-    margin-left: 50px;
+    min-width: 50%;
+    max-width: 70%;
+    margin-top: 15px;
 
 }
-.select-image
-{
-    margin-left: 50px;
+
+.select-file,
+.select-image,
+.chat-input,
+.chat-bouton {
+    display: inline-block;
+    vertical-align: middle;
+   margin-left: 20px;
+}
+.chat-bouton {
+    margin-right: 0;
 }
 
+
+.message-image{
+
+}
