--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -15,11 +15,13 @@
     <h2>Détails de la commande :</h2>
     <ul>
         {% for detail in commande.commandeDetails %}
-            <li>{{ detail.produitId.nom }} - Quantité : {{ detail.quantite }} - Prix unitaire : {{ detail.prix }}</li>
+            <li>{{ detail.produitId.nom }} - Quantité : {{ detail.quantite }} - Prix de la commande : {{ detail.prix }}</li>
         {% endfor %}
     </ul>
     <h3> Adress de livraison connu :  {{ commande.userId.adress }} {{ commande.userId.codePostal }}
         {{ commande.userId.ville }} {{ commande.userId.pays }}
     </h3>
-
+            <div class="button-paiement" >
+                <button><a href="{{ path('stripe',{'id' : commande.id}) }}">payer ma commande</a></button>
+            </div>
 {% endblock %}
