--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -19,12 +19,12 @@
         <div class="barre_et_btn_de_recherche">
                 {{ form_start(searchForm) }}
                     {{ form_widget(searchForm) }}
-                <button><img src="{{ asset('icon/loop.png') }}"></button>
+                <button><img src="{{ asset('icon/loop.png') }}" alt="rechercher"></button>
                 {{ form_end(searchForm) }}
         </div>
         <div class="panier">
 
-            <a href="{{ path('cart_index') }}"><img src="{{ asset('image-sell-me/Panier.png') }}"> panier</a>
+            <a href="{{ path('cart_index') }}"><img src="{{ asset('image-sell-me/Panier.png') }}" alt="panier"> panier</a>
         </div>
         <div class="detail-panier">
             <div>{{ app.session.get('totalProduits', 0) }}</div>
@@ -33,12 +33,12 @@
 
         <nav class="nav-header">
             <ul>
-                <li class="menu-item"><a href="#"><img src="{{ asset('img/clipart365828.png') }}" id="clipart"></a>
+                <li class="menu-item"><a href="#"><img src="{{ asset('img/clipart365828.png') }}" id="clipart" alt="menu lateral"></a>
                     <ul class="sub-menu">
                         {% if not app.user %}
-                            <div class="identifier-vous"><a href="{{ path('app_login') }}"><img src="{{ asset('img/profil.png') }}"> Bonjour, identifier vous</a></div>
+                            <div class="identifier-vous"><a href="{{ path('app_login') }}"><img src="{{ asset('img/profil.png') }}" alt="s'identifier"> Bonjour, identifier vous</a></div>
                         {% else %}
-                            <div class="identifier-vous"><a href="#"><img src="{{ asset('img/profil.png') }}"> Bonjour, {{ app.user.nom }} {{ app.user.prenom }}</a></div>
+                            <div class="identifier-vous"><a href="#"><img src="{{ asset('img/profil.png') }}" alt="profil"> Bonjour, {{ app.user.nom }} {{ app.user.prenom }}</a></div>
                         {% endif %}
                         <h4>Compte</h4>
 
@@ -62,6 +62,10 @@
                                 <li><a href="{{ path('categories_create') }}" title="dashboard">ajouter une catégorie</a></li>
                             {% endif %}
 
+                            {% if app.user.commandes %}
+                                <li><a href="{{ path('commandes_list') }}">Mes commandes</a></li>
+                                {% endif %}
+
                             <li><a href="{{ path('app_logout') }}" title="Se déconnecter">Se déconnecter</a></li>
                         {% endif %}
 
@@ -75,7 +79,7 @@
                         <li><a href="">Nous contacter</a></li>
                         <li><a href="">CGV et Droits</a></li>
                         <li><a href="">Pour mieux nous connaitre</a></li>
-                        <div class="logo-submenu"><img src="{{ asset('img/logo sell me.png') }}"></div>
+                        <div class="logo-submenu"><img src="{{ asset('img/logo sell me.png') }}" alt="logo sell-me"></div>
                     </ul>
                 </li>
                 {% for categorie in categories %}
@@ -88,8 +92,8 @@
 
             </div>
 
-            <img src="{{ asset('icon/flech gauche.png') }}" class="bouton" id="g">
-            <img src="{{ asset('icon/fleche droite.png') }}" class="bouton" id="d">
+            <img src="{{ asset('icon/flech gauche.png') }}" class="bouton" id="g" alt="précédent">
+            <img src="{{ asset('icon/fleche droite.png') }}" class="bouton" id="d" alt="suivant">
 
 
         </div>
@@ -111,54 +115,54 @@
 
             <div class="pub1">
                 <p id="p1"><a href="#">Mode Bébe</a></p>
-                <div><a href="#"><img src="{{ asset('imageProduit/image-bebe.png') }}"></a></div>
+                <div><a href="#"><img src="{{ asset('imageProduit/image-bebe.png') }}" alt="image publicitaire"></a></div>
                 <p id="p2"><a href="#">Mode Enfant</a></p>
-                <div><a href="#"><img src="{{ asset('imageProduit/image-enfant.png') }}"></a></div>
+                <div><a href="#"><img src="{{ asset('imageProduit/image-enfant.png') }}" alt="image publicitaire"></a></div>
             </div>
 
             <div class="slider">
             <div class="slider_nav">
                 <h2>Découvrir</h2>
-                <img onclick="previous()" class="slider_nav_button slider_nav_button--prev" src="{{ asset('icon/fleche gauche noire.png') }}">
-                <img onclick="next()" class="slider_nav_button slider_nav_button--next" src="{{ asset('icon/fleche droite noire.png') }}">
+                <img onclick="previous()" class="slider_nav_button slider_nav_button--prev" src="{{ asset('icon/fleche gauche noire.png') }}" alt="précédent">
+                <img onclick="next()" class="slider_nav_button slider_nav_button--next" src="{{ asset('icon/fleche droite noire.png') }}" alt="suivant">
 
             </div>
 
             <div class="slider_content">
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/image-enfant.png') }}">
+                    <img src="{{ asset('imageProduit/image-enfant.png') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/raw.jpg') }}">
+                    <img src="{{ asset('imageProduit/raw.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/R.jpg') }}">
+                    <img src="{{ asset('imageProduit/R.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/Huawei-P40-Pro-3.webp') }}">
+                    <img src="{{ asset('imageProduit/Huawei-P40-Pro-3.webp') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/34500ba22f910c17359ce57a3c170186872bb86c.jpg') }}">
+                    <img src="{{ asset('imageProduit/34500ba22f910c17359ce57a3c170186872bb86c.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/lenovo-yoga-slim-7i-carbon-2022-test-1-scaled.jpg') }}">
+                    <img src="{{ asset('imageProduit/lenovo-yoga-slim-7i-carbon-2022-test-1-scaled.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/208.jpg') }}">
+                    <img src="{{ asset('imageProduit/208.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/mise-plat-accessoires-mode-femme-couleurs-jaunes_72402-2654-min.jpg') }}">
+                    <img src="{{ asset('imageProduit/mise-plat-accessoires-mode-femme-couleurs-jaunes_72402-2654-min.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
                 <div class="slider_content_item">
-                    <img src="{{ asset('imageProduit/huawei-matepad-pro-11-une-2-770.jpg') }}">
+                    <img src="{{ asset('imageProduit/huawei-matepad-pro-11-une-2-770.jpg') }}" alt="catégorie publicitaire">
                     <h3>Mode Enfant</h3>
                 </div>
 
