--- a/templates/produit/create.html.twig
+++ b/templates/produit/create.html.twig
@@ -4,5 +4,6 @@
         {{ form_start(produiForm) }}
         {{ form_widget(produiForm) }}
         <button type="submit"> Créer !</button>
+        <button onclick="history.back()">Annuler Revenir en arriere</button>
         {{ form_end(produiForm) }}
 {% endblock %}
