--- a/templates/produit/produitSearch.html.twig
+++ b/templates/produit/produitSearch.html.twig
@@ -7,8 +7,17 @@
 {% block body %}
     <div class="main-container">
         <div class="filtre">
-            {{ form_start(filtreForm) }}
-            {{ form_widget(filtreForm) }}
+            {{ form_start(filtreForm, ) }}
+            {{ form_row(filtreForm.min) }}
+            {{ form_row(filtreForm.max) }}
+            <div class="filtre-categorie">
+            {{ form_row(filtreForm.categories) }}
+            </div>
+            <div class="filtre-livraison">
+            {{ form_row(filtreForm.livraison) }}
+            </div>
+            {{ form_row(filtreForm.nature) }}
+            {{ form_row(filtreForm.etat) }}
             <button>filtrer</button>
             {{ form_end(filtreForm) }}
         </div>
