--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,6 +35,7 @@ a:hover{
  nav ul {
      display: flex;
      list-style: none;
+     flex-wrap: wrap;
      padding-left: 0;
  }
 
@@ -190,10 +191,10 @@ input, textarea ,select{
 }
 .form-product{
     background-color: white;
-    margin-left: 430px;
+    margin-left: 30%;
     margin-right: 230px;
     margin-top: 100px;
-    width: 600px;
+    width: 40%;
     height: auto;
     color: black;
 
@@ -206,16 +207,18 @@ input, textarea ,select{
 
 .form-product button{
     background: rgba(5, 135, 255, 0.94);
-    width: 250px;
+    width: 30%;
     height: 33px;
     flex-shrink: 0;
     border-radius: 30px;
-    margin-left: 160px;
+    cursor: pointer;
+    margin-left: 30%;
     margin-bottom: 5px;
     margin-top: 5px;
+
 }
 #logo-form{
-    margin-left: 250px;
+    margin-left: 40%;
     margin-top: 10px;
     background-color: black;
     width: 70px;
@@ -460,6 +463,8 @@ transform: scale(1.1);
     height: 20px;
 }
 
+
+
 .logo-submenu{
     background: rgba(0, 0, 0, 0.80);
     text-align: center;
@@ -503,7 +508,7 @@ transform: scale(1.1);
     color: red;
 }
 #p1 {
-    margin-left: 350px;
+    margin-left: 30%;
     margin-top: 260px;
     color: #FFFFFF;
     font-size: x-large;
@@ -564,14 +569,14 @@ transform: scale(1.1);
 }
 .slider_nav_button--next{
     position: absolute;
-    left: 670px;
+    left: 60%;
     margin-top: 10px;
     cursor: pointer;
 }
 .slider_nav_button--prev{
     position: absolute;
     margin-top: 10px;
-    left: 250px;
+    left: 30%;
     cursor: pointer;
     display: none;
 
@@ -579,7 +584,7 @@ transform: scale(1.1);
 .slider_nav h2 {
     color: #302F2F;
     position: absolute;
-    margin-left: 425px;
+    margin-left: 45%;
 }
 
 .barre_et_btn_de_recherche {
@@ -593,15 +598,15 @@ transform: scale(1.1);
 .barre_et_btn_de_recherche select {
     position: absolute;
     top: 35px;
-    margin-left: 15%;
-    width: 120px;
+    margin-left: 12.9%;
+    width: 10%;
     height: 30px;
     border-radius: 15px 0 0 15px;
     background: rgba(255, 255, 255, 0.40);
 }
 
 .barre_et_btn_de_recherche select option {
-    width: 120px;
+    width: 15%;
     height: 30px;
     border-radius: 15px 0 0 15px;
     background: rgba(255, 255, 255, 0.40);
@@ -630,9 +635,9 @@ transform: scale(1.1);
     position: absolute;
     background-color: #302F2F;
     border: none;
-    margin-left: 72.5%;
+    margin-left: 70%;
     height: 20px;
-    border-radius: 0 15px 15px 0;
+
 
 }
 
@@ -652,11 +657,23 @@ transform: scale(1.1);
 
 }
 
+.filtre-categorie{
+    display: flex;
+    flex-direction: row;
+}
+
+#categories{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
 .panier {
     position: absolute;
     top : 30px;
-    right: 0;
-    margin-right: 17%;
+    right: 5%;
+
 }
 
 .panier img {
@@ -669,8 +686,8 @@ transform: scale(1.1);
 .detail-panier{
     position: absolute;
     top: 15px;
-    right: 0;
-    margin-right: 20%;
+    right: 8%;
+
     color: red;
 }
 
@@ -923,4 +940,30 @@ transform: scale(1.1);
 .list-commande {
     border-bottom: white solid;
     margin-bottom: 20px;
+}
+
+.profil_details div{
+    margin-left: 5%;
+
+    width: 70%;
+}
+.button_profil{
+display: flex;
+}
+.button_profil a {
+    width: 40%;
+    text-align: center;
+    background: rgba(5, 135, 255, 0.94);
+    margin-left: 5%;
+    margin-bottom: 5px;
+    cursor: pointer;
+    height: 33px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    margin-top: 5px;
+}
+.photoDeProfil img{
+    width: 30%;
+    height: 30%;
+    border-radius: 100%;
 }
